css/resumeStyles.css
/*body{
	background-color: rgba(165,238,237,0.41) !important;
}
h2{
	border-bottom: 1px solid black !important;
	font-family: 'Changa One', cursive;
}
li{
	font-family: 'Roboto', sans-serif;
}
#content-container{
	display: grid;
	grid-template-columns: auto;
	grid-template-rows: auto auto auto;
}*/

body{
	background-color: rgba(165,238,237,0.41) !important;
}
h2{
	border-bottom: 1px solid black !important;
	font-family: 'Changa One', cursive;
}
li{
	font-family: 'Roboto', sans-serif;
}
#content-container{
	display: -ms-grid;
	display: grid;
	-ms-grid-columns: auto;
	grid-template-columns: auto;
	-ms-grid-rows: auto auto auto;
	grid-template-rows: auto auto auto;
}
#content-container > *:nth-child(1){
	-ms-grid-row: 1;
	-ms-grid-column: 1;
}
#content-container > *:nth-child(2){
	-ms-grid-row: 2;
	-ms-grid-column: 1;
}
#content-container > *:nth-child(3){
	-ms-grid-row: 3;
	-ms-grid-column: 1;
}

